--- a/TaskManager/tasks/templates/home.html
+++ b/TaskManager/tasks/templates/home.html
@@ -1,12 +1,8 @@
 <title>Login</title>
 {% block content %}
 <div align="center">
-	<h1>Login to Task Manager</h1>
-	<form method="post">
-		{% csrf_token %}
-		{{ form.as_p }}
-		<button type="submit">Login</button>
-	</form>
+	<h1>Welcome to Task Manager {{user.username}}</h1>
+	
 	Not registered? <a href = "/tasks/register">Register here</a>
 </div>
 </form>
