--- a/TaskManager/tasks/templates/home.html
+++ b/TaskManager/tasks/templates/home.html
@@ -1,7 +1,7 @@
-<title>Login</title>
+{% extends 'base.html' %}
 {% block content %}
 <div align="center">
-	<h1>Welcome to Task Manager {{user.username}}</h1>
+	<a href = "/tasks/create">Add Task</a>
 </div>
 </form>
 {% endblock %}
