--- a/TaskManager/tasks/templates/home.html
+++ b/TaskManager/tasks/templates/home.html
@@ -19,9 +19,15 @@
                                 <td> {{task.created_at}} </td>
                                 <td> {{task.title}} </td>
                                 <td> {{task.body}} </td>
-                                <td> {{task.complete_date}} </td>
-                                <td> {{task.complete}} </td>
-                                <td> <a href = "">Edit</a> </td>
+                                <td> {{task.completed_at}} </td>
+                                <td> 
+                                	{% if task.complete == 0 %}
+                                		No
+                                	{% else %}	
+                                		Yes
+                                	{% endif %}	
+                                </td>
+                                <td> <a href = "tasks/edit/{{task.id}}">Edit</a> </td>
                                 <td> 
                                     <form action = "tasks/delete" method = "POST">
                                         {% csrf_token %}
