--- a/TaskManager/tasks/templates/base.html
+++ b/TaskManager/tasks/templates/base.html
@@ -1,8 +1,12 @@
-<div align="left">
+<div align="center">
 	<h3>Welcome to Task Manager {{user.username}}</h3>
 </div>
-<div align="right">
-	<a href = "/tasks/logout">Log out</a>
-</div><br><br><br>
+<div align="center">
+	<a href = "/tasks/home">Home</a>
+</div>
 {% block content %}
 {% endblock %}
+<br><br><br><br><br>
+<div align="center">
+	<a href = "/tasks/logout">Log out</a>
+</div>
