--- a/TaskManager/tasks/templates/search.html
+++ b/TaskManager/tasks/templates/search.html
@@ -11,7 +11,7 @@
                         </form>
                     </div>
 		{%if tasks%}
-                    <table class="table table-striped">
+                    <table border="1px">
                             <tr>
                                 <th>Date added</th>
                                 <th>Title</th>
